--- a/package.json
+++ b/package.json
@@ -2,17 +2,20 @@
   "name": "kanban_project",
   "version": "1.0.0",
   "description": "A Kanban application using HTML, CSS and JS on client-side, and NodeJS on server-side.",
-  "main": "index.js",
+  "main": "./server/index.js",
   "repository": "https://github.com/JV-Amorim/Kanban_Application",
   "author": "João Vitor Amorim",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongodb": "^3.5.3",
+    "mongoose": "^5.9.1",
+    "require-dir": "^1.2.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
   },
   "scripts": {
-    
+    "dev": "nodemon ./server/index.js"
   }
 }
